correçoes gerais